css/main.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
* {
    margin: 0;
    padding: 0;
    outline: none
}

body {
    background-color: #000;
    font-family: Trebuchet MS, Helvetica;
    color: #fff;
}

#logo {
    grid-area: logo;
}

#menu {
    grid-area: menu;
}
#menu {
    margin-top: 2em;
    display: flex;
    justify-content: flex-start;
    text-transform: uppercase;
}
#menu a {
    color: #fff9f9;
    margin-left: 2.5em;
    margin-right: 2.5em;
}
#menu a:first-child {
    margin-left: 0;
}

#menu a:visited {
    color: #fff9f9;
}


#content {
    grid-area: content;
}

/* CSS FOR SECTIONS */

@media only screen and (max-width: 650px) {
    .wrapper {
        display: grid;
        grid-template-columns: 300px auto;
        grid-template-rows: auto;
        grid-template-areas: 
            "logo logo"
            "menu menu"
            "content content"
            "footer footer";
    }
    #menu {
        margin-top: 0;
        margin-bottom: 2em;
        display: flex;
        flex-wrap: wrap;
        justify-content: center;
        align-self: center;
        text-transform: uppercase;
    }

    #logo {
        display: flex;
        flex-wrap: wrap;
        justify-content: center;
        position: relative;
        height: 300px;
    }

    #menu a {
        margin: 0.5em 0.5em;

    }
    #content #home {
        position: relative;
        width: 360px;
        margin: 0 auto;
    }
    #content iframe {
        width: 360px;
        height: 240px;
    }
}

@media only screen and (min-width: 651px) and (max-width: 1400px) {
    .wrapper {
        display: grid;
        grid-template-columns: 300px auto;
        grid-template-rows: auto;
        grid-template-areas:
            "logo menu"
            "content content"
            "footer footer";
    }
    #menu {
        margin-top: 0;
        display: flex;
        flex-wrap: wrap;
        justify-content: flex-start;
        align-self: center;
        text-transform: uppercase;
    }
    #menu a {
        margin: 1em 0.5em;
    }
    #content {
        margin: 0 0;
    }

    #content iframe {
        width: 640px;
        height: 360px;
    }
    #content #home {
        position: relative;
        width: 640px;
        margin: 0 auto;
    }
}

@media only screen and (min-width: 1401px) {
    .wrapper {
        display: grid;
        grid-template-columns: 300px auto;
        grid-template-rows: auto auto;
        grid-template-areas:
            "logo menu"
            "logo content"
            "footer footer";
    }
    #content {
        margin: 2.5em 2.5em 2.5em 0;
    }

    #content iframe {
        width: 1080px;
        height: 720px;
    }
}

